--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>🥔 Harvest Clicker 🧑‍🌾</title>
-    <link rel="stylesheet" href="./css/style.min.css" /> 
+    <meta name="description" content="Harvest Clicker">
+    <link rel="stylesheet" href="./css/style.min.css" />
     <!-- <link rel="stylesheet" href="./css/style.css" />-->
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon-16x16.png" />
+    <link rel="manifest" href="./assets/site.webmanifest" />
   </head>
 
   <body>
@@ -22,10 +27,10 @@
           <input type="button" value="click" />
           <p class="farm"></p>
           <div class="barre">
-              <div id="chargement"></div>
+            <div id="chargement"></div>
           </div>
         </figure>
-  
+
         <figure>
           <section>
             <ul>
@@ -37,17 +42,17 @@
             </ul>
           </section>
           <section>
-              <ul>
-                <li class="ico">🚜</li>
-                <li>0</li>
-                <li>Tracteur</li>
-                <li><input type="submit" value="Acheter" /></li>
-                <li></li>
-              </ul>
-            </section>
+            <ul>
+              <li class="ico">🚜</li>
+              <li>0</li>
+              <li>Tracteur</li>
+              <li><input type="submit" value="Acheter" /></li>
+              <li></li>
+            </ul>
+          </section>
         </figure>
       </div>
-      
+
       <section class="upgrade">
         <h2>Améliorations</h2>
         <ul>
