--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <footer>
         <p>&copy; - PhilDaiguille</p>
     </footer>
-    <script src="./js/app.js"></script>
+    <script src="./js/app.min.js"></script>
 </body>
 
 </html>
