--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
         <section class="upgrade">
             <h2>Améliorations</h2>
             <ul>
-                <li><img src="./assets/gear.png" alt="engrenage" /> 2500$ <br> Effet X2</li>
-                <li><img src="./assets/engrais.png" alt="engrais" /> 15000$ <br> Effet X5</li>
-                <li><img src="./assets/ordi.png" alt="ordinateur" /> 150000 $ <br> Effet X10 </li>
+                <li><img src="./assets/gear.png" alt="engrenage" /> 2 500$ <br> Effet X2</li>
+                <li><img src="./assets/engrais.png" alt="engrais" /> 15 000$ <br> Effet X5</li>
+                <li><img src="./assets/ordi.png" alt="ordinateur" /> 150 000 $ <br> Effet X10 </li>
             </ul>
         </section>
     </main>
