--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title> Harvest Clicker 🧑‍🌾</title>
     <meta name="description" content="Harvest Clicker" />
-    <link rel="stylesheet" href="./css/style.min.css" />
-
+    <link rel="stylesheet" href="./css/style.css" />
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon-16x16.png" />
@@ -32,7 +31,6 @@
                     <div id="chargement"></div>
                 </div>
             </figure>
-
             <figure>
                 <section>
                     <ul>
@@ -76,7 +74,6 @@
                 </section>
             </figure>
         </div>
-
         <section class="upgrade">
             <h2>Améliorations</h2>
             <ul>
