--- a/index.html
+++ b/index.html
@@ -89,4 +89,14 @@
     <script src="./js/app.min.js"></script>
 </body>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DTPVPWCF3W"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DTPVPWCF3W');
+</script>
+
 </html>
